--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,4 @@
+```yaml
 version: 2
    updates:
      - package-ecosystem: "github-actions"
@@ -8,3 +9,4 @@ version: 2
        directory: "/code/"Add commentMore actions
        schedule:
          interval: "weekly"
+```
